<resources>
    <string name="app_name">InstagramClone</string>
    <string name="str_instagram">Instagram</string>
    <string name="str_full_name">FullName</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_c_password">Confirm Password</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_already_account">Already have an account?</string>
    <string name="str_don_t_account">Don`t have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="str_home">Home</string>
    <string name="str_search">Search</string>
    <string name="str_upload">Upload</string>
    <string name="str_favourite">Favourite</string>
    <string name="str_profile">Profile</string>
    <string name="str_write_caption">Write a caption</string>
    <string name="str_follow">Follow</string>
    <string name="str_following">Following</string>
    <string name="str_followers">Followers</string>
    <string name="str_posts">Posts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ent">Enter photo name</string>
</resources>